--- a/app-stg.yaml
+++ b/app-stg.yaml
@@ -2,8 +2,8 @@ runtime: nodejs
 env: flex
 
 env_variables:
-  ORDERS_HOST: "https://api.geoawareness.woolpert.dev"
-  API_KEY: "AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo"
+  ORDERS_HOST: "https://api-stg.geoawareness.woolpert.dev"
+  API_KEY: "AIzaSyANZ0QPXF3HtTJBoJKccCgSdr9KtUdbDCM"
   PULL_INTERVAL_MS: 2000
 
 # Keep it small and cheap
