--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ env: flex
 
 env_variables:
   ORDERS_HOST: "https://api.geoawareness.woolpert.dev"
-  API_KEY: "AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo"
+  API_KEY: "YOUR_API_KEY"
   PULL_INTERVAL_MS: 2000
 
 # Keep it small and cheap
