Remove mocks. Add dotenv for running locally.

--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,7 @@ runtime: nodejs
 env: flex
 
 env_variables:
-  ORDERS_HOST: "https://api.geoawareness.woolpert.dev"
+  ORDERS_HOST: "GEOAWARENESS_REST_API_ENDPOINT"
   API_KEY: "YOUR_API_KEY"
   PULL_INTERVAL_MS: 2000
 
