--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "npm run mock-server & env ORDERS_HOST=http://localhost:3000 npm run socket-server",
-    "dev-deployed": "npm run mock-server & env ORDERS_HOST=https://api-sbx.geoawareness.woolpert.dev env API_KEY=AIzaSyAmiNBWfKjrheXBxdmtSOWbWomdr-3tJUM npm run socket-server",
-    "mock-server": "nodemon mock.js",
-    "socket-server": "nodemon index.js",
+    "dev": "node -r dotenv/config index.js",
     "lint": "npx eslint index.js mock.js static/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +22,7 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
